Fixed jump links for directory by adding margin to top to account for fixed header.

--- a/agsci/common/theme/assets/css/_base.scss
+++ b/agsci/common/theme/assets/css/_base.scss
@@ -1299,3 +1299,19 @@ section.jumbotron.banner {
         padding: 0;
     }
 }
+
+body.portaltype-agsci_directory {
+
+    span.anchor {
+        position: relative;
+
+        span {
+            position: absolute;
+            display: block;
+            content: " ";
+            top: -125px;
+            visibility: hidden;
+            pointer-events: none;
+        }
+    }
+}
