--- a/agsci/common/theme/assets/css/agsci.common.base.css
+++ b/agsci/common/theme/assets/css/agsci.common.base.css
@@ -1638,6 +1638,16 @@ p.publication .journal-name {
 section.jumbotron.banner .jumbotron-text {
   padding: 0; }
 
+body.portaltype-agsci_directory span.anchor {
+  position: relative; }
+  body.portaltype-agsci_directory span.anchor span {
+    position: absolute;
+    display: block;
+    content: " ";
+    top: -125px;
+    visibility: hidden;
+    pointer-events: none; }
+
 .print-only-logo {
   display: none; }
 
